--- a/themes/light/css/beto.css
+++ b/themes/light/css/beto.css
@@ -243,7 +243,13 @@ background-color: #8B7D62;
 .texto_padrinos {
     font-size: 18px;
 }
-
+.footer{
+   font-family: 'Parisienne', cursive !important;
+   background-color: #C7B38A;
+   padding-top: 15px;
+   font-size: 24px;
+   color: black !important;
+}
 /* mobile version mobile version mobile version mobile version mobile version mobile version mobile version mobile version mobile version */
 
 @media only screen and (max-width: 400px) {
@@ -251,7 +257,7 @@ background-color: #8B7D62;
         background-size: auto 520px !important;
     }
     .titulo_nombres {
-        font-size: 60px !important;
+        font-size: 55px !important;
     }
 
     .nos_casamos {
@@ -281,5 +287,8 @@ background-color: #8B7D62;
         justify-content: space-evenly !important;
         margin: auto !important;
     }
+    .footer{
+        font-size: 14px !important;
 
+    }
 }
