--- a/themes/light/css/beto.css
+++ b/themes/light/css/beto.css
@@ -46,7 +46,7 @@ body {
     text-align: center;
     font-family: 'Quicksand', sans-serif !important;
     font-size: 24px;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
    /* max-width: 100vh !important;*/
 
 }
@@ -257,8 +257,6 @@ background-color: #8B7D62;
 /* mobile version mobile version mobile version mobile version mobile version mobile version mobile version mobile version mobile version */
 
 @media only screen and (max-width: 400px) {
-    body{
-    }
     .titulo_nombres {
         font-size: 55px !important;
     }
