--- a/themes/light/css/beto.css
+++ b/themes/light/css/beto.css
@@ -47,6 +47,8 @@ body {
     font-family: 'Quicksand', sans-serif !important;
     font-size: 24px;
     overflow-x: hidden !important;
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
    /* max-width: 100vh !important;*/
 
 }
