--- a/themes/light/css/backend.css
+++ b/themes/light/css/backend.css
@@ -40,6 +40,9 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;*/
 }
+.breadcrumb{
+    display: none !important;
+}
 .invitado-index, .mesa-index{
     margin-top: 60px !important;
 }
@@ -138,7 +141,6 @@ body {
     height: 60px;
     border-top: 1px solid #e5e5e5;
     padding-top: 20px;
-    color: white;
     font-family: textoIntermedioTitPpalFont;
 }
 .footer .container{
