--- a/themes/light/css/beto.css
+++ b/themes/light/css/beto.css
@@ -52,14 +52,25 @@ body {
    /* max-width: 100vh !important;*/
 
 }
-
+#wrap_slider{
+    background-color: rgba(255, 255, 255, 0.41);
+    width: 100%;
+    height: auto;
+    max-height: 720px;
+    margin: auto;
+}
 div#slider {
     overflow: hidden;
+    max-width: 1280px;
+    max-height: 720px;
+    margin: auto;
 }
 
 div#slider figure img {
     width: 20%;
     float: left;
+    height: 100%;
+    overflow-y: hidden;
 }
 
 div#slider figure {
@@ -69,7 +80,7 @@ div#slider figure {
     left: 0;
     text-align: left;
     font-size: 0;
-    animation: 30s slidy infinite;
+    animation: 20s slidy infinite;
 }
 
 div#slider figure img {}
