--- a/themes/light/css/beto.css
+++ b/themes/light/css/beto.css
@@ -191,7 +191,7 @@ background-color: #8B7D62;
 .texto_padrinos {
     font-size: 18px;
 }
-    .footer{
+.footer{
    font-family: 'Parisienne', cursive !important;
    background-color: #C7B38A;
    padding-top: 15px;
@@ -208,19 +208,19 @@ background-color: #8B7D62;
     margin-top: 30px !important;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 500px) {
     body{
         background-color: transparent !important;
     }
     .container_carrousel{
-        ;width: 100% !important;
+        width: 100% !important;
     }
     .titulo_nombres {
         font-size: 50px !important;
     }
 
     .nos_casamos {
-        font-size: 40px !important;
+        font-size: 35px !important;
     }
 
     .seccion {
@@ -232,9 +232,7 @@ background-color: #8B7D62;
     .number-wrap{
         width: 100% !important;
     }
-    .separador-number-wrap{
-        display: none !important;
-    }
+
     .texto_padrinx {
         margin: 20px 0px !important;
         font-size: 30px !important;
@@ -251,8 +249,18 @@ background-color: #8B7D62;
 
     }
 }
+
+@media only screen and (max-width: 680px) {
+    .separador-number-wrap{
+        display: none !important;
+    }
+    .number-wrap{
+        width: 40% !important;
+    }
+}
+
 @media only screen and (max-width: 1400px) {
     .container_carrousel{
-        ;width: 100% !important;
+        width: 100% !important;
     }
 }
