--- a/themes/light/css/beto.css
+++ b/themes/light/css/beto.css
@@ -212,18 +212,20 @@ background-color: #8B7D62;
         width: 100% !important;
     }
 }
-@media (min-width: 501px) {
+@media (min-width: 601px) {
     body{
         background-image: url('/themes/light/img/carlaybeto/background2_1.jpg');
     }
 }
 
-
-
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     body{
         background-image: url('/themes/light/img/carlaybeto/background2_1_mobile.jpg');
     }
+}
+
+@media (max-width: 500px) {
+
     .container_carrousel{
         width: 100% !important;
     }
