--- a/themes/light/css/beto.css
+++ b/themes/light/css/beto.css
@@ -221,6 +221,7 @@ background-color: #8B7D62;
 @media (max-width: 600px) {
     body{
         background-image: url('/themes/light/img/carlaybeto/background2_1_mobile.jpg');
+        background-size: auto 50%;
     }
 }
 
