--- a/themes/light/css/beto.css
+++ b/themes/light/css/beto.css
@@ -220,8 +220,9 @@ background-color: #8B7D62;
 
 @media (max-width: 600px) {
     body{
-        background-image: url('/themes/light/img/carlaybeto/background2_1_mobile.jpg');
+        background-image: url('/themes/light/img/carlaybeto/background2_2_mobile.jpg');
         background-size: auto 600px;
+        background-position: top;
     }
 }
 
