--- a/themes/light/css/beto.css
+++ b/themes/light/css/beto.css
@@ -5,7 +5,7 @@ body {
     background-attachment: fixed;
     background-position: center;
     background-repeat: repeat;
-    background-size: auto 110%;
+    background-size: auto 150vh;
     text-align: center;
     font-family: 'Quicksand', sans-serif !important;
     font-size: 24px;
