--- a/themes/light/css/backend.css
+++ b/themes/light/css/backend.css
@@ -1,33 +1,3 @@
-@font-face {
-    /*font-family: textofont;*/
-    font-family: tituloPrincipalFont;
-    src: url(/themes/light/fonts/starwars/Starjhol.ttf);
-}
-@font-face {
-    /*font-family: textofont;*/
-    font-family: titulofont;
-    src: url(/themes/light/fonts/starwars/death_star.otf);
-}
-@font-face {
-    /*font-family: textofont;*/
-    font-family: textoIntermedioTitPpalFont;
-    src: url(/themes/light/fonts/starwars/SerifGothic-Heavy.otf);
-}
-@font-face {
-    font-family: textofont;
-    /*font-family: titulofont;*/
-    /*src: url(/themes/light/fonts/starwars/Stjldbl1.ttf);*/
-    src: url(/themes/light/fonts/starwars/SerifGothic-Heavy.otf) ;
-   /* src: url(/themes/light/fonts/starwars/death_star.otf) ;*/
-    /*src: url(/themes/light/fonts/starwars/Star_Jedi_Rounded.TTF) ;*/
-}
-@font-face {
-    /*font-family: textofont;*/
-    font-family: starjedi;
-    src: url(/themes/light/fonts/starwars/Starjedi.ttf);
-}
-
-
 html,
 body {
     text-rendering: optimizeLegibility !important;
@@ -43,7 +13,7 @@ body {
 .breadcrumb{
     display: none !important;
 }
-.invitado-index, .mesa-index{
+.invitado-index, .mesa-index, .trafix-index{
     margin-top: 60px !important;
 }
 
@@ -51,97 +21,21 @@ body {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    font-size: 18px
 }
-.wrap_invitados_buttons a:hover,.wrap_invitados_buttons a:focus {
-    text-decoration: none;
+.wrap_invitados_buttons a{
+    margin: 0px 15px;
+    font-size: 16px;
 }
-.collapse.in, .collapsing   {
-    background-color: white !important;
-}
-
-.big_container{
-    padding-right: 0px !important;
-    padding-left: 0px !important;
-}
-.modal-header{
-    text-align: center;
-    font-family: textofont;
-}
-.item_regalo{
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    font-size: 18px;
-    margin-bottom: 20px;
-    width: 100%
+.glyphicon{
+    font-size: 20px;
 }
 
-.item_regalo img {
-    margin-right: 15px;
-}
-.item_regalo span{
-    padding-right: 15px;
-}
-.site-index{
-    background-image: url(/themes/light/img/space.png);
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    overflow: hidden;
-}
-.wrap_testigxs{
-    background-image: url(/themes/light/img/fondo2.jpg);
-    background-repeat: repeat;
-    background-position: center;
-    padding: 60px 0px;
-    margin-left: -15px ;
-    margin-right: -15px ;
-    margin-bottom: 90px;
-}
-.wrap_testigos_backgorund_fade{
-    background-color: rgba(255,255,255,0.8);
-    text-align: center;
-}
-/*
-.navbar-brand img{
-    float: left;
-    margin: -5px 20px;
-    height: 40px;
-}
 
-.nav_sin_log .navbar-brand{
-    padding-top: 14px !important;
-    width: 290px;
-}
-.nav_sin_log .navbar-brand img{
-    margin-top: -8px; !important;
-}
-*/
-.wrap {
-    min-height: 100%;
-    height: auto;
-    margin: 0 auto -60px;
-    padding: 0 0 60px;
-}
-
-.wrap > .container {
-    text-align: center !important;
-    padding: 70px 15px 20px;
-}
-.wrap_opciones_mercado_pago{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
 
 .footer {
-    height: 60px;
-    border-top: 1px solid #e5e5e5;
+    border: 1px solid #e5e5e5;
     padding-top: 20px;
-    font-family: textoIntermedioTitPpalFont;
+    color: #5cabee;
 }
 .footer .container{
     margin-bottom: 0px !important;
@@ -265,250 +159,3 @@ div.required label:after {
 .kv-meter-container {
     width: 105px;
 }
-/* CSS AGREGADO PARA PAGINA BODA  CSS AGREGADO PARA PAGINA BODA  CSS AGREGADO PARA PAGINA BODA  CSS AGREGADO PARA PAGINA BODA*/
-.container{
-    margin-bottom: 50px !important;
-}
-
-.wrap_first_img{
-    height: 100vh;
-    overflow: hidden;
-
-    display: flex;
-    justify-content: center;
-    vertical-align: center;
-    margin: 0px -15px;
-}
-.first_img{
-    width: auto;
-    height: auto;
-    background-position: center;
-    vertical-align: middle;
-}
-
-.titulo_1, .titulo_2, .titulo_principal, .titulo_1_black, .titulo_2_black{
-    display: block;
-    margin: auto;
-    font-size: 48px;
-    margin-bottom: 30px;
-    max-width: 800px;
-    text-align: center;
-    font-family: titulofont !important;
-    color: white;
-}
-
-.titulo_principal{
-    font-family: tituloPrincipalFont !important;
-    color: yellow;
-    display: flex;
-    flex-direction: column;
-    font-size: 68px;
-}
-
-.texto_intermedio_tit_ppal{
-    font-size: 26px;
-    color: white;
-    font-family: textoIntermedioTitPpalFont !important;
-
-}
-
-.texto_1, .texto_1_black{
-    font-size: 30px;
-    text-align: center;
-    font-family: textofont !important;
-    color: white;
-}
-.titulo_1_black, .texto_1_black, .titulo_2_black{
-    color: black;
-}
-.titulo_2_black, .titulo_2{
-    font-size: 26px;
-}
-.texto_padrinx{
-    font-size: 24px;
-}
-.detalle_foto_padrinx{
-    margin-right: 15px;
-    margin-left: 15px;
-}
-.div_foto_padrinx{
-    width: 180px;
-    height: 187px;
-    overflow-y: hidden;
-    margin-bottom: 15px;
-}
-.btn-como-llegar{
-    border-radius: 50px !important;
-    font-size: 20px !important;
-    background: none !important;
-    border-color: #ffffff !important;
-    color: #ffffff !important;
-    border-width: 2px;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    padding: 10px 50px !important;
-}
-.btn-como-llegar:hover {
-    box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.25) !important;
-}
-.btn-texto{
-    font-family: textoIntermedioTitPpalFont !important;
-}
-.btn-como-llegar:hover,.btn-como-llegar  a:hover,.btn-como-llegar  a:focus{
-    color: #000000 !important;
-    background-color: #ffffff !important;
-    border-color: #ffffff !important;
-    outline: 0 !important;
-}
-
-.countdown{
-    max-width: 700px;
-    margin: 0 auto;
-    font-size: 26px;
-    font-family: starjedi;
-    color: white;
-
-}
-.number-wrap{
-    display: flex;
-    flex-direction: column;
-}
-.wrap_bloque_fotos_padrinx{
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-.wrap_fotos_padrinx{
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-}
-.wrap_regalo img{
-    align-self: center;
-
-}
-.wrap_regalo, .wrap_regalo:hover, .wrap_regalo:focus{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 200px;
-    margin-bottom: 30px;
-    text-decoration: none !important;
-    color: black !important;
-}
-.wrap_regalo span, .wrap_regalo span:hover, .wrap_regalo span:focus{
-    text-decoration: none !important;
-    color: black !important;
-    font-family: textofont !important;
-}
-#tbSearch{
-    display: block;
-    margin: auto;
-    width: 240px;
-    margin-bottom: 40px;
-}
-
-/*
-
-.boton_posiciones{
-    margin: auto;
-    color: #FFFFFF;
-    background-color: #4CAF50;
-    border: none;
-    padding: 8px 16px;
-    vertical-align: middle;
-    overflow: hidden;
-    text-decoration: none;
-    text-align: center;
-    cursor: pointer;
-    white-space: nowrap;
-    font-size: 18px;
-    width: 20%;
-    font-family: titulofont;
-}
-
-.boton_posiciones:hover{
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-}
-.nav_white_opacity{
-    background-color: white;
-    opacity: 0.95;
-    font-size: 16px;
-    font-family: titulofont;
-}
-.just_white{
-    background-color: white;
-    /*overflow-x: scroll;*/
-    /*font-family: titulofont !important;
-}
-.white_opacity, .white_opacity_not_animation{
-    background-color: white;
-    opacity: 0.95;
-    overflow-x: scroll;
-    font-family: titulofont !important;
-}
-.white_opacity:hover{
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,1.0),0 6px 20px 0 rgba(0,0,0,1.0);
-    opacity: 1.0;
-}
-*/
-
-/*elimina las flechas del input number*/
-/*input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    /* display: none; <- Crashes Chrome on hover */
-    /*-webkit-appearance: none !important;
-    margin: 0 !important; /* <-- Apparently some margin are still there even though it's hidden */
-/*
-}
-
-input[type='number'] {
-    -moz-appearance:textfield !important;
-    padding: 0px !important;
-    text-align: center !important;
-}
-
-@media (max-width: 925px) {
-
-}
-@media screen and (max-width: 991px) {
-
-}
-@media screen and (max-width: 600px) {
-
-}
-@media screen and (max-width: 768px) {
-
-}
-
-
-/*@media (max-width: 768px){
-    .seven-cols .col-md-1,
-    .seven-cols .col-sm-1,
-    .seven-cols .col-lg-1  {
-        width: 100%;
-        *width: 100%;
-    }
-}
-
-@media (min-width: 992px) {
-    .seven-cols .col-md-1,
-    .seven-cols .col-sm-1,
-    .seven-cols .col-lg-1 {
-        width: 14.285714285714285714285714285714%;
-        *width: 14.285714285714285714285714285714%;
-    }
-}
-
-@media (min-width: 1200px) {
-    .seven-cols .col-md-1,
-    .seven-cols .col-sm-1,
-    .seven-cols .col-lg-1 {
-        width: 14.285714285714285714285714285714%;
-        *width: 14.285714285714285714285714285714%;
-    }
-}*/
