--- a/themes/light/css/backend.css
+++ b/themes/light/css/backend.css
@@ -35,7 +35,7 @@ body {
     width: 100%;
     margin-top: 50px;
     font-size: 18px;
-    position: absolute;
+    position: relative;
     left: 0;
     bottom: 0px;
 }
