--- a/themes/light/css/common.css
+++ b/themes/light/css/common.css
@@ -7,3 +7,7 @@ a:hover, a:focus, a:active {
     text-decoration: none;
 }
 
+.footer .container{
+    display: flex;
+    justify-content: space-around;
+}
