--- a/themes/light/css/belenysergio.css
+++ b/themes/light/css/belenysergio.css
@@ -50,7 +50,7 @@ body {
 }
 
 .titulo_nombres {
-    font-family: 'Parisienne', cursive;
+    font-family: 'Questrial', sans-serif;
     font-size: 80px;
 }
 
@@ -112,8 +112,11 @@ body {
 
 .btn-como-llegar {
     background: none !important;
-    border-color: #8B7D62 !important;
-    color: #8B7D62 !important;
+    background-color: #FFFFFF !important;
+    border-color: #2E9093 !important;
+    color: #A0DCE1;
+    color: #FFFFFF;
+    color: #000000 !important;
     border-radius: 30px !important;
     border-width: 2px !important;
     font-size: 20px !important;
@@ -123,13 +126,14 @@ body {
 
 
 .btn-como-llegar:hover {
-    color: #000000 !important;
-    background-color: #C7B38A !important;
-    border-color: #C7B38A !important;
-    box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2) !important;
+    color: #ffffff !important;
+    background-color: #A0DCE1 !important;
+    border-color: #A0DCE1 !important;
+    box-shadow: 0 10px 40px 0 rgba(160, 220, 225, 0.9) !important;
     -webkit-transition: all 0.3s ease-in-out !important;
     -moz-transition: all 0.3s ease-in-out !important;
     transition: all 0.3s ease-in-out !important;
+    opacity: 1 !important;
 }
 
 .fas,
@@ -220,7 +224,7 @@ body {
     margin-top: 30px !important;
 }
 .footer{
-    font-family: 'Parisienne', cursive;
+    font-family: 'Questrial', sans-serif;
     padding-top: 15px;
     font-size: 24px;
     height: 60px;
