--- a/themes/light/css/belenysergio.css
+++ b/themes/light/css/belenysergio.css
@@ -16,7 +16,7 @@ body {
     background-repeat: repeat;
     background-size: auto 150vh;
     text-align: center;
-    font-family: 'Quicksand', sans-serif !important;
+    font-family: 'Questrial', sans-serif !important;
     font-size: 24px;
     overflow-x: hidden !important;
     text-rendering: optimizeLegibility !important;
@@ -39,7 +39,7 @@ body {
     display: block;
     margin: auto;
     text-align: center;
-    font-family: 'Quicksand', sans-serif !important;
+    font-family: 'Questrial', sans-serif !important;
     margin-top: 75px;
     font-size: 28px;
     overflow: hidden;
@@ -50,7 +50,7 @@ body {
 }
 
 .titulo_nombres {
-    font-family: 'Questrial', sans-serif;
+    font-family: 'Questrial', sans-serif !important;
     font-size: 80px;
 }
 
@@ -107,7 +107,8 @@ body {
 }
 
 .btn-como-llegar span {
-    font-family: 'Rubik', sans-serif !important;
+    /*font-family: 'Rubik', sans-serif !important;*/
+    font-family: 'Questrial', sans-serif !important;
 }
 
 .btn-como-llegar {
@@ -224,7 +225,7 @@ body {
     margin-top: 30px !important;
 }
 .footer{
-    font-family: 'Questrial', sans-serif;
+    font-family: 'Questrial', sans-serif !important;
     padding-top: 15px;
     font-size: 24px;
     height: 60px;
