--- a/themes/light/css/belenysergio.css
+++ b/themes/light/css/belenysergio.css
@@ -262,6 +262,7 @@ body {
         background-image: url('/themes/light/img/belenysergio/background.png');
         background-size: auto 110vh;
         background-position: top;
+        background-position-x: 741px;
     }
 }
 
