--- a/themes/light/css/backend.css
+++ b/themes/light/css/backend.css
@@ -10,6 +10,13 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;*/
 }
+.loader_grande{
+    border-top-color: #5bc0de;
+}
+.loader_chico{
+    border-top-color: #5bc0de;
+}
+
 .breadcrumb{
     display: none !important;
 }
