--- a/themes/light/css/common.css
+++ b/themes/light/css/common.css
@@ -3,8 +3,8 @@
 }
 
 a:hover, a:focus, a:active {
-    color: inherit;
-    text-decoration: none;
+    color: inherit !important;
+    text-decoration: none !important;
 }
 
 .footer .container{
