--- a/themes/light/css/belenysergio.css
+++ b/themes/light/css/belenysergio.css
@@ -22,6 +22,7 @@ body {
     background-size: auto 150vh;
     text-align: center;
     font-family: 'Questrial', sans-serif !important;
+    font-display: auto;
     font-size: 24px;
     overflow-x: hidden !important;
     text-rendering: optimizeLegibility !important;
@@ -253,13 +254,13 @@ body {
 }
 @media (min-width: 601px) {
     body{
-        background-image: url('/themes/light/img/belenysergio/background.png');
+        background-image: url('/themes/light/img/belenysergio/background.jpg');
     }
 }
 
 @media (max-width: 600px) {
     body{
-        background-image: url('/themes/light/img/belenysergio/background.png');
+        background-image: url('/themes/light/img/belenysergio/background.jpg');
         background-size: auto 110vh;
         background-position: top;
         background-position-x: 741px;
