--- a/themes/light/css/belenysergio.css
+++ b/themes/light/css/belenysergio.css
@@ -237,7 +237,8 @@ body {
     height: 60px;
     display: flex;
     justify-content: space-around;
-    background-color: #C7B38A !important;
+    background-color: #2E9093 !important;
+    color: white;
 }
 
 
